--- a/frontend/brightcoders-frontend/index.html
+++ b/frontend/brightcoders-frontend/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/logo61.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+  name="description"
+  content="Bright Coders is a leading tech training institute in Kenya offering programming and software development courses."
+/> <link rel="preload" as="image" href="/logo2.png" />
+
     <title>Bright Coders — Official Website</title>
   </head>
   <body>
